--- a/bob/package.json
+++ b/bob/package.json
@@ -34,10 +34,12 @@
     "material-ui": "^0.16.7",
     "moment": "^2.18.0",
     "mongoose": "^4.8.1",
-    "oauth": "^0.9.15",
+    "oauth": "^0.9.15",    
+    "rc-time-picker": "^2.3.3",
     "react": "^15.4.2",
     "react-cookie": "^1.0.4",
     "react-custom-scrollbars": "^4.0.2",
+    "react-datetime": "^2.8.8",
     "react-dom": "^15.4.2",
     "react-drawer": "^1.2.5",
     "react-dropzone": "^3.11.2",
