--- a/google-information/package.json
+++ b/google-information/package.json
@@ -14,6 +14,8 @@
     "seneca": "^3.3.0",
     "seneca-balance-client": "^0.6.0",
     "seneca-consul-registry": "^0.1.0",
-    "seneca-mesh": "^0.10.0"
+    "seneca-mesh": "^0.10.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^18.0.0"
   }
 }
