--- a/intent-extraction/package.json
+++ b/intent-extraction/package.json
@@ -9,13 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.4",
     "color": "^1.0.3",
     "express": "^4.15.2",
+    "recastai": "^2.3.0",
     "seneca": "^3.3.0",
     "seneca-balance-client": "^0.6.0",
     "seneca-consul-registry": "^0.1.0",
     "seneca-mesh": "^0.10.0",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^18.0.0"
+    "superagent-relative": "^0.2.0"
+  },
+  "devDependencies": {
+    "should": "^11.2.1"
   }
 }
